# capable-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  pyproject.toml  readme.md
.github/: CODEOWNERS
.github/workflows/: build-test.yml  validate-pr.yml
capable_core/: .env.example  Dockerfile  __init__.py  cli.py  config.py  run.py  start.sh
capable_core/agents/: __init__.py  agent.py  developer.py  parallel_squads.py  qa_architect.py  squads.py
capable_core/flows/: __init__.py
capable_core/flows/nightwatch/: __init__.py  agents.py
capable_core/tools/: __init__.py  ci_tools.py  github_tools.py  sandbox_tools.py
tests/: conftest.py
tests/integration/: test_agent_reasoning.py  test_cli_and_imports.py
