[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capable-core"
version = "0.2.0"
description = "Autonomous Multi-Agent Development System using Google ADK"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "google-adk[extensions]>=1.15.0",
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.50.0",
    "PyGithub>=2.1.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mutmut>=2.4.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "litellm>=1.30.0",
    "google-cloud-pubsub>=2.18.0",
    "google-apps-chat>=0.1.0",
    "requests>=2.31.0",
]
authors = [
    {name = "Idan Asis", email = "idan@ableintelligence.ai"}
]

[project.optional-dependencies]
hf-local = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
capable-run = "capable_core.run:main"

[tool.setuptools.packages.find]
include = ["capable_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
